<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".MainActivity"
		android:background="#3FC6C2">

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/Welcome"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:id="@+id/mainTittle"
			android:fontFamily="@font/roboto_mono_bold"
			android:textSize="24sp"
			app:layout_constraintVertical_bias="0.203"
			app:layout_constraintHorizontal_bias="0.575"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/hello"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:id="@+id/mainTittle2"
			android:fontFamily="@font/roboto_mono_bold"
			android:textSize="24sp"
			app:layout_constraintVertical_bias="0.121"
			app:layout_constraintHorizontal_bias="0.533"/>

	<Button
			android:text="@string/encrypt"
			android:layout_width="163dp"
			android:layout_height="70dp"
			android:id="@+id/encryption_button"
			android:layout_marginTop="60dp"
			app:layout_constraintTop_toBottomOf="@+id/mainTittle"
			android:layout_marginEnd="123dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="139dp"
			app:layout_constraintHorizontal_bias="1.0"
			android:textSize="20sp"
			android:textAlignment="center"
			android:fontFamily="@font/roboto_mono_bold"
			android:layout_marginBottom="38dp"
			app:layout_constraintBottom_toTopOf="@+id/decrypted_button"
			android:background="#BC9F9F"/>

	<Button
			android:text="@string/decrypt"
			android:layout_width="163dp"
			android:layout_height="70dp"
			android:id="@+id/decrypted_button"
			app:layout_constraintTop_toBottomOf="@id/encryption_button"
			android:layout_marginEnd="123dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="139dp"
			app:layout_constraintHorizontal_bias="1.0"
			android:textAlignment="center"
			android:textSize="20sp"
			app:layout_constraintBottom_toTopOf="@+id/locker_button"
			android:background="#AE9E9E"
			android:fontFamily="@font/roboto_mono_bold"/>

	<Button
			android:text="@string/locker_maker"
			android:layout_width="206dp"
			android:layout_height="95dp"
			android:id="@+id/locker_button"
			android:layout_marginTop="38dp"
			app:layout_constraintTop_toBottomOf="@+id/decrypted_button"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="126dp"
			android:layout_marginEnd="122dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:fontFamily="@font/roboto_mono_bold"
			android:textSize="20sp"
			android:background="#958686"
			android:textAlignment="center"/>

	<TextView
			android:text="@string/made_with_by_azmi"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/textView"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginBottom="43dp"
			android:layout_marginEnd="171dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="182dp"
			android:fontFamily="@font/roboto_mono_italic"
			android:textSize="12sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>