<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".TextEncoder"
		android:background="#3FC6C2">

	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="#D1495B"
			tools:layout_editor_absoluteY="0dp"
			tools:layout_editor_absoluteX="0dp">

		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="#D1495B">

			<ImageView
					android:id="@+id/imageView4"
					android:layout_width="116dp"
					android:layout_height="98dp"
					android:layout_marginTop="64dp"
					android:elevation="7dp"
					android:src="@drawable/coki"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:ignore="ContentDescription"
					app:layout_constraintHorizontal_bias="0.498"/>

			<LinearLayout
					android:layout_width="355dp"
					android:layout_height="469dp"
					android:layout_marginHorizontal="30dp"
					android:background="#f7c59f"
					android:elevation="5dp"
					android:orientation="vertical"
					app:layout_constraintTop_toTopOf="parent"
					android:layout_marginTop="124dp"
					app:layout_constraintEnd_toEndOf="parent"
					tools:ignore="MissingConstraints">

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginHorizontal="15dp"
						android:layout_marginTop="60dp"
						android:orientation="horizontal">

					<ImageView
							android:layout_width="40dp"
							android:layout_height="40dp"
							android:src="@drawable/enter_text"
							android:contentDescription="@string/text_image"/>

					<EditText
							android:id="@+id/enter_enctext_editText"
							android:layout_width="0dp"
							android:layout_height="50dp"
							android:layout_weight="1"
							android:layout_marginStart="5dp"
							android:textSize="14sp"
							android:backgroundTint="#00000000"
							android:hint="@string/enter_your_text_here"
							android:textColor="#022b3a"
							android:textColorHint="#022b3a"
							android:inputType="text"
							android:autofillHints="text"
							android:fontFamily="@font/roboto"/>
				</LinearLayout>

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginHorizontal="15dp"
						android:layout_marginTop="20dp"
						android:orientation="horizontal">

					<ImageView
							android:layout_width="40dp"
							android:layout_height="40dp"
							android:src="@drawable/enter_text"
							android:contentDescription="@string/text_image"/>

					<EditText
							android:id="@+id/enter_key"
							android:layout_width="0dp"
							android:layout_height="48dp"
							android:layout_weight="1"
							android:layout_marginStart="5dp"
							android:textSize="14sp"
							android:backgroundTint="#00000000"
							android:hint="@string/enter_key_here"
							android:textColor="#022b3a"
							android:textColorHint="#022b3a"
							android:inputType="text"
							android:autofillHints="text"
							android:fontFamily="@font/roboto"/>
				</LinearLayout>

				<Button
						android:id="@+id/encrypt_btn"
						android:layout_width="match_parent"
						android:layout_height="60dp"
						android:layout_marginHorizontal="30dp"
						android:layout_marginTop="20dp"
						android:backgroundTint="#efefd0"
						android:text="@string/encrypt"
						android:textColor="@android:color/black"
						android:textSize="18sp"
						android:onClick="enc"
						android:fontFamily="@font/roboto_mono_bold"
						android:textAlignment="center"
						android:background="#D5CBCB"/>

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginHorizontal="15dp"
						android:layout_marginTop="30dp"
						android:orientation="horizontal">

					<ImageView
							android:layout_width="40dp"
							android:layout_height="40dp"
							android:src="@drawable/enter_code"
							android:contentDescription="@string/encrypt_image_text"/>

					<TextView
							android:layout_width="0dp"
							android:layout_height="45dp"
							android:layout_weight="1"
							android:layout_marginStart="5dp"
							android:backgroundTint="#00000000"
							android:text="@string/your_encrypted_text"
							android:textColor="#022b3a"
							android:textColorHint="#022b3a"
							android:textSize="12sp"
							android:fontFamily="@font/roboto"/>
				</LinearLayout>

				<TextView
						android:id="@+id/tv_encrypted_txt"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center"
						android:layout_marginHorizontal="15dp"
						android:layout_marginTop="20dp"
						android:backgroundTint="#FFF"
						android:text=""
						android:textColor="#022b3a"
						android:textColorHint="#022b3a"
						android:textSize="14sp"
						android:fontFamily="@font/roboto"/>

				<Button
						android:id="@+id/copy_text_btn"
						android:layout_width="match_parent"
						android:layout_height="60dp"
						android:layout_marginHorizontal="30dp"
						android:layout_marginTop="20dp"
						android:layout_marginBottom="40dp"
						android:textColor="@color/black"
						android:backgroundTint="#efefd0"
						android:text="@string/copy_text"
						android:textSize="18sp"
						android:onClick="copy"
						android:fontFamily="@font/roboto_mono_bold"
						android:textAlignment="center"
						android:background="#D5CECE"/>
			</LinearLayout>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>