<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".LockerMaker"
		android:background="#3FC6C2">

	<EditText
			android:layout_width="218dp"
			android:layout_height="65dp"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/OTPNumber"
			android:background="#F8F5F5"
			android:fontFamily="@font/roboto_mono_bold"
			android:textSize="34sp"
			android:layout_marginEnd="97dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="96dp"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="156dp"
			android:clickable="false"
			android:contextClickable="false"
			android:importantForAutofill="no"
			android:hint="@string/otp"
			android:textAlignment="center"
			android:textColor="#776464"/>

	<Button
			android:text="@string/generate_otp"
			android:layout_width="164dp"
			android:layout_height="73dp"
			android:id="@+id/generateOTP_button"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="125dp"
			android:layout_marginEnd="126dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginTop="32dp"
			android:onClick="generate"
			app:layout_constraintTop_toBottomOf="@+id/OTPNumber"
			app:layout_constraintHorizontal_bias="0.0"
			android:background="#B3A8A8"
			android:textColor="#455A64"
			android:textAlignment="center"
			android:textSize="20sp"
			android:fontFamily="@font/roboto_mono_bold"
			android:layout_marginBottom="2dp"
			app:layout_constraintBottom_toTopOf="@+id/cipherText"/>

	<Button
			android:text="@string/make_a_locker"
			android:layout_width="178dp"
			android:layout_height="71dp"
			android:id="@+id/locker_btn"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="125dp"
			android:layout_marginEnd="126dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:onClick="create"
			app:layout_constraintTop_toBottomOf="@+id/cipherText"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginBottom="217dp"
			android:textAlignment="center"
			android:textSize="20sp"
			android:background="#D1C5C5"/>

	<TextView
			android:text="@string/locker_maker"
			android:layout_width="189dp"
			android:layout_height="60dp"
			android:id="@+id/textView3"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="70dp"
			android:layout_marginEnd="125dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="139dp"
			android:layout_marginBottom="40dp"
			app:layout_constraintBottom_toTopOf="@+id/OTPNumber"
			android:fontFamily="@font/roboto_mono_bold"
			android:textSize="24sp"/>

	<androidx.constraintlayout.widget.Barrier
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:barrierDirection="top"
			tools:layout_editor_absoluteY="114dp"
			tools:layout_editor_absoluteX="193dp"/>

	<androidx.constraintlayout.widget.Barrier
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:barrierDirection="top"
			tools:layout_editor_absoluteY="117dp"
			tools:layout_editor_absoluteX="199dp"/>

	<View
			android:id="@+id/divider"
			android:layout_width="306dp"
			android:layout_height="7dp"
			android:background="@color/black"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="52dp"
			android:layout_marginEnd="53dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView3"
			android:layout_marginBottom="26dp"
			app:layout_constraintBottom_toTopOf="@+id/OTPNumber"/>

	<EditText
			android:layout_width="207dp"
			android:layout_height="68dp"
			android:inputType="text"
			android:ems="10"
			android:hint="@string/enter_your_cipher"
			android:id="@+id/cipherText"
			android:layout_marginTop="25dp"
			app:layout_constraintTop_toBottomOf="@+id/generateOTP_button"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="96dp"
			android:layout_marginEnd="108dp"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginBottom="37dp"
			app:layout_constraintBottom_toTopOf="@+id/locker_btn"
			android:background="#FFFFFF"
			android:textSize="14sp"
			android:textColor="@color/black"
			android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>